terraform/modules/ec2/secgroups.tf
resource "aws_security_group" "allow_web_traffic" {
  name        = "${var.resource_prefix}-web-server-https"
  description = "Allow web traffic inbound"
  vpc_id      = var.vpc_id

  tags = merge(var.resource_tags, {
    "Name" = "${var.resource_prefix}-web-server-sg"
  })
}

resource "aws_security_group_rule" "allow_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_web_traffic.id
}

resource "aws_security_group_rule" "allow_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_web_traffic.id
}

resource "aws_security_group_rule" "allow_outbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_web_traffic.id
}
